Fit all in 1 page

--- a/semester_2/cs_assignment_1.tex
+++ b/semester_2/cs_assignment_1.tex
@@ -122,7 +122,7 @@ The graph of the strongly connected components is the following:
           \end{minted}
           \end{absolutelynopagebreak}
 
-          Note that this algorithm could be implemented also by using recursion, I wrote this version because I came up with this implementation first.
+          %   Note that this algorithm could be implemented also by using recursion, I wrote this version because I came up with this implementation first.
 
     \item Mathematically, the proof of this is very similar to the proof for Bolzano's Theorem.
           We define 3 sequences by induction:
