--- a/semester_2/cs_assignment_1.tex
+++ b/semester_2/cs_assignment_1.tex
@@ -50,7 +50,7 @@ We use the master theorem to solve the equations:
 \begin{enumerate}
     \item We have $\log_b a = \log_2 4 = 2 > d = 1$. This is the third case of the theorem, so $T(n) = O(n^{\log_b a}) = O(n^2)$.
     \item We have $\log_b a = \log_3 7 \approx 1.77 < d = 2$. This is the first case of the theorem, so $U(n) = O(n^d) = O(n^2)$.
-    \item Note that $f(n) = n/2 = O(n)$. We have $\log_b a = \log_3 3 = 1 = d$. This is the second case of the theorem, so $V(n) = O(n^d \log n) = O(n)$.
+    \item Note that $f(n) = n/2 = O(n)$. We have $\log_b a = \log_3 3 = 1 = d$. This is the second case of the theorem, so $V(n) = O(n^d \log n) = O(n \log n)$.
 \end{enumerate}
 
 \section*{Exercise 2}
